--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -41,6 +41,9 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
+    Bug:
+        Sometimes extra chakram hangs out on the player.
+
     Clone throw
         Hold B_PASSIVE + press B_TOOL to throw a clone that will blow up immediately.
         Hold B_PASSIVE + hold B_TOOL to throw yourself leaving behind a clone that blows up.
@@ -88,6 +91,9 @@ Current tasks:
     - Squirrel velocity should reset when knocked back
     - Add SFX when the MC is damaged
 
+    - Cocoon boss
+        - Make astral projection spawn from the boss small, grow, then approach the player to attack
+        before becoming small again and returning to the boss.
     - Add sleeping Vanara to the Cocoon.
         - Can use a special NPC that doesn't face you when talking for now.
         - Use a variety of colors.
