--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -42,10 +42,13 @@ Graphics:
 
 Current tasks:
     Bug:
+        Throwing clone on lava causes you to take double damage
         Sometimes extra chakram hangs out on the player.
+        cloud sommersault seems broken when using it diagonally or at least in conveyer belt room
 
-    Clone throw
-        Clone can pass over solid tiles while z > 16 or so.
+    Change prep animation for explosion
+        charge particles form randomly in a circle around the hero shooting into them,
+        with shorter radius and more density as time passes.
 
     Nimbus cloud
         - on overworld material takes you to: Lake, City, Village, Peaks, Ruins
@@ -335,6 +338,9 @@ At some point I should write tests to validate certain things like:
     - All bombable + locked doors have ids, all objects with saveStatus set have ids.
     - All objectFlags correspond to some object or dialogue key or loot type
     - All escaped dialogue corresponds to a special frame or loot type.
+
+Clone improvements
+    Add particle effects when using the clone tool (+animation eventually)
 
 Additional Clone Tool Behavior:
     Charging the clone 1 level adds elements to the clones weapon/tools/explosion.
